# revelation

./: .bandit  .gitignore  .hgignore  AUTHORS  ChangeLog  HACKING  INSTALL  Makefile.am  NEWS  README  README.md  TODO  acinclude.m4  authors.xml  autogen.sh  configure.ac  meson.build  meson_post_conf.py  meson_post_install.py  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: linux.yml
.tx/: config
data/: Makefile.am  info.olasagasti.revelation.appdata.xml.in  info.olasagasti.revelation.desktop.in.in  info.olasagasti.revelation.gschema.xml  info.olasagasti.revelation.metainfo.xml.in  meson.build  revelation.appdata.xml.in  revelation.desktop  revelation.gresource.xml  revelation.schemas
data/bonobo/: GNOME_RevelationApplet.server.in  Makefile.am
data/cracklib/: Makefile.am  pwdict
data/css/: style.css
data/gconf/: Makefile.am  revelation-applet.schemas  revelation.schemas
data/icons/: Makefile  Makefile.am  Makefile.in  meson.build
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/256x256/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
data/images/: Makefile.am
data/mime/: Makefile.am  info.olasagasti.revelation.desktop.in.in  revelation.desktop  revelation.desktop.in  revelation.desktop.in.in  revelation.xml
data/schemas/: Makefile.am  org.revelation.gschema.xml
data/ui/: Makefile.am  about.ui  actions.xml  entry-edit.ui  exception.ui  folder-edit.ui  help-overlay.ui  menubar.ui  menubar.xml  message.ui  password-change.ui  password-checker.ui  password-generator.ui  password-lock.ui  password-open.ui  password-save.ui  popup-tree.xml  preferences-doubleclick.ui  preferences-files.ui  preferences-passwords.ui  preferences-toolbar.ui  preferences.ui  revelation.gresource.xml  searchbar.ui  toolbar.ui  toolbar.xml
gnome/: revelation.desktop  revelation.schemas
help/: LINGUAS  meson.build
help/C/: create.page  index.page
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ca.po  cs.po  de.po  es.po  et.po  eu.po  fi.po  fr.po  it_IT.po  lt.po  meson.build  nb.po  nl.po  pl.po  pt_BR.po  ru.po  sr_RS.po  sv.po  uk.po  zh.po
src/: Makefile.am  meson.build  revelation  revelation-applet.in  revelation-applet.py  revelation.in  revelation.py
src/applet/: Makefile.am  revelation-applet.py
src/bundle/: AfSplitter.py  Makefile.am  PBKDFv2.py  __init__.py  luks.py
src/data/icons/: Makefile.am
src/data/icons/32x32/: Makefile.am
src/data/icons/scalable/: Makefile.am
src/data/schemas/: org.revelation.gschema.xml
src/data/ui/: popup-tree.xml  toolbar.xml
src/lib/: Makefile.am  PBKDF2.py  __init__.py  __init__.py.in  config.py  config.py.in  data.py  datafile.py  dialog.py  druid.py  entry.py  io.py  misc.py  stock.py  ui.py  util.py  widget.py
src/lib/bundle/: AfSplitter.py  Makefile.am  __init__.py  luks.py
src/lib/datahandler/: Makefile.am  __init__.py  base.py  csvfile.py  fpm.py  gpass.py  keepassxc.py  netrc.py  pwsafe.py  rvl.py  splashid.py  text.py  xhtml.py
src/revelation/: PBKDF2.py  config.py.in  data.py  dialog.py  entry.py  io.py  ui.py
src/revelation/bundle/: AfSplitter.py  Makefile.am  luks.py
src/revelation/datahandler/: csvfile.py  fpm.py  netrc.py  pwsafe.py  xhtml.py
src/wrap/: Makefile.am
src/wrap/authmanager/: Makefile.am  authmanager.defs  authmanagermodule.c
src/wrap/crack/: Makefile.am  crack.c.in
src/wrap/gnomemisc/: Makefile.am  authmanagermodule.c  gnomemisc.defs  gnomemisc.override  gnomemiscmodule.c
src/wrap/mman/: Makefile.am  mman.c
test/: Makefile.am  config.py  data.py  datahandler.py  datahandler_fpm.py  datahandler_gpass.py  datahandler_netrc.py  datahandler_rvl.py  datahandler_text.py  datahandler_xhtml.py  entry.py  io.py  ui.py  util.py
wrap/: Makefile.am  authmanagermodule.c
wrap/authmanager/: Makefile.am  authmanager.defs  authmanager.override
wrap/crack/: Makefile.am  crack.c.in
