EXTRA_DIST= \
	config.py \
	data.py \
	datahandler.py \
	datahandler_fpm.py \
	datahandler_rvl.py \
	entry.py \
	io.py \
	util.py

check:
	python config.py -v
	python data.py -v
	python datahandler.py -v
	python datahandler_fpm.py -v
	python datahandler_rvl.py -v
	python entry.py -v
	python io.py -v
	python util.py -v

