EXTRA_DIST= \
	config.py \
	data.py \
	datahandler.py \
	datahandler_fpm.py \
	datahandler_gpass.py \
	datahandler_netrc.py \
	datahandler_rvl.py \
	datahandler_xhtml.py \
	entry.py \
	io.py \
	ui.py \
	util.py

check:
	python config.py -v
	python data.py -v
	python datahandler.py -v
	python datahandler_fpm.py -v
	python datahandler_gpass.py -v
	python datahandler_netrc.py -v
	python datahandler_rvl.py -v
	python datahandler_xhtml.py -v
	python entry.py -v
	python io.py -v
	python ui.py -v
	python util.py -v

