imagesdir	= $(pkgdatadir)/images
images_DATA	= \
	account-creditcard.png \
	account-cryptokey.png \
	account-database.png \
	account-door.png \
	account-email.png \
	account-ftp.png \
	account-generic.png \
	account-phone.png \
	account-shell.png \
	account-website.png \
	folder-open.png \
	folder.png \
	password.png \
	revelation-16x16.png \
	revelation.png

