## Process this file with automake to produce Makefile.in
#
# data/icons/48x48/Makefile.am
#
# $Id$
#

appicondir		= $(datadir)/icons/hicolor/48x48/apps
dist_appicon_DATA	= revelation.png revelation-locked.png

mimeicondir		= $(datadir)/icons/hicolor/48x48/mimetypes
dist_mimeicon_DATA	= gnome-mime-application-x-revelation.png

