## Process this file with automake to produce Makefile.in
#
# data/icons/scalable/Makefile.am
#
# $Id$
#

appicondir		= $(datadir)/icons/hicolor/scalable/apps
dist_appicon_DATA	= info.olasagasti.revelation.svg

appiconcustomdir	= $(datadir)/revelation/icons/hicolor/scalable/apps
dist_appiconcustom_DATA	= \
	document-export.svg \
	document-import.svg \
	object-locked.svg \
	password-change.svg \
	password-check.svg \
	password-generate.svg
